<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginSignup.SignupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_head"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginVertical="15dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_name_hint"
                android:layout_marginVertical="15dp"/>

            <EditText
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_username_hint"
                android:layout_marginVertical="15dp"/>

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/signup_password_hint"
                android:layout_marginVertical="15dp"/>

            <EditText
                android:id="@+id/signup_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/signup_confirm_password_hint"
                android:layout_marginVertical="15dp"/>

            <EditText
                android:id="@+id/signup_phoneno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_phoneno_hint"
                android:inputType="phone"
                android:layout_marginVertical="15dp"/>


            <Button
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_button"
                app:backgroundTint="#FFFFFF"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:onClick="onClickSignup"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>